--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,8 +1,28 @@
 [tool.poetry]
 name = "fastapi-resource-server"
-version = "0.1.0"
+version = "0.1.2"
 description = "Build resource servers with FastAPI"
-authors = ["Livio Ribeiro <livio@codata.pb.gov.br>"]
+authors = ["Livio Ribeiro <livioribeiro@outlook.com>"]
+license = "MIT"
+readme = "README.md"
+repository = "https://github.com/livioribeiro/fastapi-resource-server"
+keywords = [ "fastapi", "authentication", "oidc", "openidconnect" ]
+classifiers = [
+    "Development Status :: 4 - Beta",
+    "Environment :: Web Environment",
+    "Intended Audience :: Developers",
+    "Intended Audience :: Information Technology",
+    "License :: OSI Approved :: MIT License",
+    "Topic :: Internet",
+    "Topic :: Internet :: WWW/HTTP",
+    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
+    "Topic :: Software Development :: Libraries",
+    "Topic :: Software Development :: Libraries :: Application Frameworks",
+    "Topic :: Software Development :: Libraries :: Python Modules",
+    "Programming Language :: Python :: 3",
+    "Programming Language :: Python :: 3 :: Only",
+    "Programming Language :: Python :: 3.6",
+]
 packages = [
     { include = "*", from = "src" },
 ]
